# learn-infra-ops

./: .gitignore  README.md  pyproject.toml
ansible/dgo-k8s/: master-node.yml
ansible/digital-ocean/: hosts
ansible/digital-ocean/k8s-setup/: docker-daemon.json  initial.yml  k8s-dependencies.yml  master-node.yml  remove-master-node-taint.yml
cloud-infra/: cloud-init.sh  cloud-init.yaml  digitalocean-static.yaml
cloud-infra/ansible/: hosts.yaml
cloud-infra/ansible/cert-manager/: cluster-issuer-staging.yaml  cluster-issuer.txt  cmds-certs.txt  namespace.yaml
cloud-infra/ansible/deprecated/: initial-host-setup.yaml
cloud-infra/ansible/k3s/: config.yaml  install.yaml  local-kube-config.yaml  local-kubectl-config.yaml
cloud-infra/digital-ocean/ansible/: github-container-registry-secret.yaml  hosts  hosts-old  hosts.yaml  initial-host-setup.yaml  initial-server-setup-ubuntu.yml  initial-server-setup.yaml  initial-server-setup.yml
docker/golang-example/: Dockerfile  go.mod  main.go
helm/tutorial/: Chart.yaml  values.yaml
helm/tutorial/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
infrastructure/: cloud-init.sh
infrastructure/ansible/: github-container-registry-secret.yaml
infrastructure/ansible/deprecated/: check-distro.sh  initial-host-setup.yaml
infrastructure/ansible/k3s/: config.yaml  local-kube-config.yaml
k8s/nfs/: storage-class.yml
k8s/postgres/: config-map.yml  deployment.yml  persistent-volume.yml
local-infra/: authorized_keys  local-network-init.sh
(+67 files in other folders)
