[tool.poetry]
authors = ["francoposa <franco@francoposa.io>"]
description = ""
name = "learn-devops"
version = "0.1.0a0"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "5.*"

[tool.poetry.dev-dependencies]
yamllint = "^1.*"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
